<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About %s</string>
    <string name="about_dialog_body">Update to the latest version of Galaxy Apps to enjoy new features and improvements.</string>
    <string name="about_dialog_title">Notifications</string>
    <string name="about_network_retry">Retry</string>
    <string name="about_network_unconnected_phone">"Can't check for updates. Your phone's network connection isn't stable."</string>
    <string name="about_network_unconnected_tablet">"Can't check for updates. Your tablet's network connection isn't stable."</string>
    <string name="about_no_network_connection">No network connection</string>
    <string name="action_add">add</string>
    <string name="action_delete">Delete</string>
    <string name="active_process">View more</string>
    <string name="active_process_viva">View More:Click View More:Push View More:Tap View More</string>
    <string name="anomaly_type_description_anr">"App isn't responding"</string>
    <string name="anomaly_type_description_bg_camera_usage">Excessive camera usage</string>
    <string name="anomaly_type_description_bg_network">Background data usage</string>
    <string name="anomaly_type_description_contact_access">Frequently accessing contacts</string>
    <string name="anomaly_type_description_crash">Frequent crashes</string>
    <string name="anomaly_type_description_gps">Frequent location checks</string>
    <string name="anomaly_type_description_high_background_battery_usage">High background battery usage</string>
    <string name="anomaly_type_description_unknown">Unknown</string>
    <string name="anomaly_type_description_wakelock_wakeup">Frequent wakeups</string>
    <string name="app_history_detail_issue_detected">Issue detected</string>
    <string name="app_history_detail_list_batterydraining">High battery usage</string>
    <string name="app_history_detail_list_crash">App crash</string>
    <string name="app_history_detail_list_crashes">App crashes</string>
    <string name="app_history_detail_list_header">History</string>
    <string name="app_history_detail_list_malware">Malware</string>
    <string name="app_history_detail_list_memoryleak">High memory usage</string>
    <string name="app_history_detail_list_title">Issue history</string>
    <string name="app_history_detail_list_today">Today (%s)</string>
    <string name="app_history_detail_list_total">Total</string>
    <string name="app_history_list_issues">%1$d issues detected (Latest %2$s)</string>
    <string name="app_history_list_only_issue">1 issue detected (Latest %s)</string>
    <string name="app_history_list_title">App issue history</string>
    <string name="app_info_icon">App info</string>
    <string name="app_name">Device care</string>
    <string name="app_sleep_select_apps_zero">Select apps</string>
    <string name="app_summary_no_perf">Battery, Storage, Memory, Security</string>
    <string name="app_summary_no_perf_no_secu">Battery, Storage, Memory</string>
    <string name="app_uninstall">Uninstall</string>
    <string name="app_uninstall_title">Uninstall app</string>
    <string name="applications">Applications</string>
    <string name="applocking_eula_summary1">"Apps that have not been used for %d days will be automatically put to sleep.

Sleeping apps will not receive updates or send you notifications, but they will wake up automatically as soon as you use them again."</string>
    <string name="applocking_eula_summary3">You can change this option later in Battery settings.</string>
    <string name="audio">Audio</string>
    <string name="auto_cleaner">Auto restart</string>
    <string name="auto_cleaner_bullet">" • "</string>
    <string name="auto_cleaner_setting_day">Day</string>
    <string name="auto_cleaner_setting_time">Time</string>
    <string name="auto_cleaner_summary">Your phone will restart automatically within 1 hour of the time you set.</string>
    <string name="auto_cleaner_summary_condition_battery">The battery is above %d%%</string>
    <string name="auto_cleaner_summary_condition_lcd">The screen is off.</string>
    <string name="auto_cleaner_summary_condition_sim">SIM card lock is off.</string>
    <string name="auto_cleaner_summary_condition_use">"The phone isn't being used."</string>
    <string name="auto_cleaner_summary_condition_use_tablet">"The tablet isn't being used."</string>
    <string name="auto_cleaner_summary_sub">Your phone will only restart when:</string>
    <string name="auto_cleaner_summary_sub_tablet">Your tablet will only restart when:</string>
    <string name="auto_cleaner_summary_tablet">Your tablet will restart automatically within 1 hour of the time you set.</string>
    <string name="auto_opt_desc">"Optimize your phone automatically once a day. Background apps will be closed, but not your most recently used apps, and unnecessary files will be deleted. This won't affect your personal data."</string>
    <string name="auto_opt_desc_condition">"Your phone will only be optimized if your screen is off and your phone isn't in use. For best results, schedule optimization for a time when you don't usually use your phone."</string>
    <string name="auto_opt_desc_condition_tablet">" Your tablet will only be optimized if your screen is off and your tablet isn't in use. For best results, schedule optimization for a time when you don't usually use your tablet."</string>
    <string name="auto_opt_desc_tablet">"Optimize your tablet automatically once a day. Background apps will be closed, but not your most recently used apps, and unnecessary files will be deleted. This won't affect your personal data."</string>
    <string name="auto_opt_title">Auto Optimization</string>
    <string name="battery_adaptive_battery_summary">"Limit battery usage for apps that you don't use often. Your phone will learn how you use apps over time."</string>
    <string name="battery_adaptive_battery_title">Adaptive battery</string>
    <string name="battery_advanced_settings_notification">Notifications</string>
    <string name="battery_app_using_power">App power management</string>
    <string name="battery_app_using_power_description">Put these apps to sleep to prevent background battery use.</string>
    <string name="battery_mode_adaptive_power_saving_description">"Set the power mode automatically based on your usage patterns to save power when it's not needed. This won't change your screen resolution."</string>
    <string name="battery_mode_adaptive_power_saving_title">Adaptive power saving</string>
    <string name="battery_mode_dialog_aod_title">Turn off Always on display</string>
    <string name="battery_mode_dialog_brightness_title">Brightness</string>
    <string name="battery_mode_dialog_limit_cpu_descr">Limit the maximum CPU speed to %d%%.</string>
    <string name="battery_mode_dialog_limit_cpu_title">Limit CPU speed</string>
    <string name="battery_mode_dialog_reset">Reset</string>
    <string name="battery_mode_dialog_restrict_bg_network_descr">Prevent background apps from using Wi-Fi and mobile data.</string>
    <string name="battery_mode_dialog_restrict_bg_network_title">Restrict background data</string>
    <string name="battery_mode_dialog_screen_resolution_title">Screen resolution</string>
    <string name="battery_mode_high_performance">High performance</string>
    <string name="battery_mode_max">Maximum power saving</string>
    <string name="battery_mode_mid">Medium power saving</string>
    <string name="battery_mode_optimized">Optimized</string>
    <string name="battery_optimize_settings_description">"Automatically adjust your settings to save battery.

The settings below will be applied at midnight if you're not using your phone. You can turn off any settings that you don't want to change."</string>
    <string name="battery_optimize_settings_screen_media_volume">Media volume</string>
    <string name="battery_optimize_settings_screen_timeout">Screen timeout</string>
    <string name="battery_optimize_settings_summary">"Save battery by optimizing your settings when you're not using your phone."</string>
    <string name="battery_optimize_settings_title">Optimize settings</string>
    <string name="battery_put_apps_to_sleep">Put apps to sleep</string>
    <string name="battery_settings_app_power_category_title">App Power management</string>
    <string name="battery_settings_app_power_management">Put unused apps to sleep</string>
    <string name="battery_settings_app_power_management_description">"Put apps to sleep when they haven't been used for a while."</string>
    <string name="battery_settings_app_using_power_description">Get notified about apps using power in the background.</string>
    <string name="battery_settings_auto_app_disabler">Auto disable unused apps</string>
    <string name="battery_settings_disabled_apps">Disabled apps</string>
    <string name="battery_settings_optimization_category_title">Settings power optimization</string>
    <string name="battery_settings_sleeping_apps">Sleeping apps</string>
    <string name="battery_settings_sleeping_apps_description">Select apps that will never be able to run in the background. These apps may not receive updates or send notifications.</string>
    <string name="charging">Charging</string>
    <string name="fast_cable_charging">Fast cable charging</string>
    <string name="fast_cable_charging_description">Charge your battery more quickly. Your device may become hot while using Fast cable charging. If Fast cable charging is disabled, standard charging will be used instead.</string>
    <string name="fast_wireless_charging">Fast wireless charging</string>
    <string name="fast_wireless_charging_description">Charge your battery more quickly. You may hear a fan noise while using Fast wireless charging. If Fast wireless charging is disabled, standard wireless charging will be used instead.</string>
    <string name="memorysaver_enable">S Clean</string>
    <string name="memorysaver_sub_text">Clear any unnecessary files and data automatically at scheduled times.</string>
    <string name="memorysaver_title">Storage booster</string>
    <string name="protect_battery">Protect battery</string>
    <string name="protect_battery_description">"To extend the lifespan of your battery, limit the maximum charge to %1$d%%. Note that after you restart, the battery will show %2$d%% when it's charged to %3$d%%."</string>
    <string name="security_eula_activate">Activate</string>
    <string name="security_eula_scloud_activation_required_phone">Activate device security to protect your phone.</string>
    <string name="settings_title_clear_data">Clear data</string>
    <string name="settings_title_manage_data">Manage storage</string>
    <string name="settings_title_version">Version</string>
    <string name="title_security">Security</string>
</resources>