<?xml version="1.0" encoding="utf-8"?>
<com.samsung.android.sm.view.RoundedCornerLinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/sclean_title_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.samsung.android.sm.view.SubHeaderDotLineView android:ellipsize="end" android:id="@id/sclean_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/memorysaver_title" style="@style/SMWinset.ListSubHeader" />
    </RelativeLayout>
    <RelativeLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/sclean_action_container" android:background="?android:selectableItemBackground" android:focusable="true" android:clickable="true" style="@style/SMWinset.ListItemStyle.2Line">
        <Switch android:id="@id/sclean_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
        <View android:id="@id/switch_divider_line" android:layout_centerVertical="true" android:layout_toStartOf="@id/sclean_switch" style="@style/SMWinset.VerticalDividerStyle" />
        <com.samsung.android.sm.view.RoundedCornerLinearLayout android:orientation="vertical" android:layout_toStartOf="@id/switch_divider_line" android:layout_alignParentStart="true" style="@style/SMWinset.ListItemTextViewStyle.2Line.TextContainer">
            <TextView android:gravity="start|center" android:id="@id/sclean_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/memorysaver_enable" style="@style/SMWinset.ListItemTextViewStyle.2Line.PrimaryText" />
            <TextView android:id="@id/sclean_sub_text" android:text="@string/memorysaver_sub_text" style="@style/SMWinset.ListItemTextViewStyle.2Line.SecondaryTextExplanation" />
        </com.samsung.android.sm.view.RoundedCornerLinearLayout>
    </RelativeLayout>
</com.samsung.android.sm.view.RoundedCornerLinearLayout>